<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amanda.assignment_2.fragment_planner"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/title_view_resa"
        android:layout_gravity="center_horizontal"
        android:background="#ffff121a"
        android:textColor="#ffffffff"
        android:padding="15dp"
        android:text="@string/titleReseplaneraren"
        android:textSize="@dimen/abc_action_bar_progress_bar_size" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton2"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/icon_shuffle"
        android:layout_marginTop="-65dip"
        android:layout_marginRight="-150dip"
        android:background="@drawable/icon_shuffle"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dip"
        android:layout_marginBottom="-20dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textFran"
            android:id="@+id/textView2"
            android:paddingLeft="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textTill"
            android:id="@+id/textView6"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="@android:color/black"
            android:layout_below="@+id/textView2"
            android:layout_toStartOf="@+id/editText2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/textView2"
            android:layout_marginRight="15dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:layout_alignBottom="@+id/textView6"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/textView2"
            android:layout_marginRight="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textTidDatum"
            android:id="@+id/textView7"
            android:layout_below="@+id/textView6"
            android:layout_alignParentStart="true"
            android:paddingTop="30dp"
            android:paddingLeft="20dp"
            android:textColor="@android:color/black"
            android:paddingBottom="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textJustNu"
            android:id="@+id/textView8"
            android:textColor="@android:color/black"
            android:layout_alignBottom="@+id/textView7"
            android:layout_centerHorizontal="true"
            android:paddingBottom="20dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Redigera"
            android:id="@+id/button"
            android:layout_alignBottom="@+id/textView8"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="7dip"
            android:layout_marginRight="15dip"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ankomst"
            android:id="@+id/radioButton"
            android:layout_below="@+id/button"
            android:layout_alignEnd="@+id/textView7" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Avgång"
            android:id="@+id/radioButton2"
            android:layout_below="@+id/textView8"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textTrafikslag"
            android:id="@+id/textView9"
            android:layout_below="@+id/radioButton"
            android:layout_alignParentStart="true"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button2Redigera"
            android:id="@+id/button2"
            android:layout_alignBottom="@+id/textView9"
            android:layout_alignEnd="@+id/button"
            android:layout_marginTop="7dip"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button3Sok"
            android:id="@+id/button3"
            android:layout_marginTop="37dp"
            android:layout_below="@+id/button2"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textFavoritresor"
            android:id="@+id/textView10"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:textColor="#ffffffff"
            android:textStyle="bold"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:layout_above="@+id/textView13"
            android:layout_marginBottom="7dip"
            android:layout_alignParentStart="true"
            android:background="#ffff121a"
            android:textSize="@dimen/Favoritresor3" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textBevakningar"
            android:id="@+id/textView13"
            android:linksClickable="true"
            android:background="#ffff121a"
            android:padding="20dp"
            android:textStyle="bold"
            android:textSize="@dimen/Favoritresor3"
            android:textColor="#ffffffff"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>


</LinearLayout>
